@@ -1,4 +1,3 @@
-/* #undef PQXX_HAVE_PQDESCRIBEPORTAL */
 /* #undef PQXX_HAVE_PQENCRYPTPASSWORD */
 /* #undef PQXX_HAVE_PQISTHREADSAFE */
 /* #undef PQXX_HAVE_PQUNESCAPEBYTEA_9 */
